[gd_scene load_steps=39 format=3 uid="uid://cnsy87eymywb0"]

[ext_resource type="Script" uid="uid://dore72xdttiqc" path="res://entities/tank/tank.gd" id="1_dsgy6"]
[ext_resource type="Resource" uid="uid://cyhjue8xu1nc6" path="res://entities/tank/tanks/m4a1_sherman/m4a1_sherman.tres" id="2_eykj3"]
[ext_resource type="Script" uid="uid://8pinjuwojoxv" path="res://entities/tank/components/hull.gd" id="3_axr6c"]
[ext_resource type="Texture2D" uid="uid://bf7waln3elljp" path="res://entities/tank/tanks/debug_tank/debug_tank.png" id="3_cxr3h"]
[ext_resource type="Script" uid="uid://bwhyg2mhvr4k5" path="res://entities/tank/components/turret.gd" id="4_eykj3"]
[ext_resource type="Texture2D" uid="uid://mfftpfnk0gyh" path="res://entities/tank/shared_assets/sprites/muzzle_flash.png" id="5_eykj3"]
[ext_resource type="PackedScene" uid="uid://bal81er17r4dc" path="res://entities/tank/tank_hud/tank_hud.tscn" id="7_lx22l"]
[ext_resource type="Texture2D" uid="uid://obj5nglso4jh" path="res://entities/tank/shared_assets/sprites/tank_explosion.png" id="10_17p3m"]
[ext_resource type="AudioStream" uid="uid://brjqg23ouox5k" path="res://entities/tank/shared_assets/sounds/explosion/death_explosion.ogg" id="10_f0hnj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbkxa"]
size = Vector2(52, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0hnj"]
atlas = ExtResource("3_cxr3h")
region = Rect2(7, 83, 52, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_eykj3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cxr3h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eykj3"]
atlas = ExtResource("5_eykj3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxr3h"]
atlas = ExtResource("5_eykj3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx22l"]
atlas = ExtResource("5_eykj3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_422qp"]
atlas = ExtResource("5_eykj3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oten"]
atlas = ExtResource("5_eykj3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17p3m"]
atlas = ExtResource("5_eykj3")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f0hnj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eykj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxr3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx22l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_422qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oten")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17p3m")
}],
"loop": false,
"name": &"flash",
"speed": 30.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f0hnj"]
resource_local_to_scene = true
random_pitch = 1.1
random_volume_offset_db = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1x70j"]
atlas = ExtResource("10_17p3m")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htklb"]
atlas = ExtResource("10_17p3m")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckajw"]
atlas = ExtResource("10_17p3m")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxiug"]
atlas = ExtResource("10_17p3m")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_28uff"]
atlas = ExtResource("10_17p3m")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s5go"]
atlas = ExtResource("10_17p3m")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i8o3"]
atlas = ExtResource("10_17p3m")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr61v"]
atlas = ExtResource("10_17p3m")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7cde"]
atlas = ExtResource("10_17p3m")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8blf"]
atlas = ExtResource("10_17p3m")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vkjr"]
atlas = ExtResource("10_17p3m")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65c58"]
atlas = ExtResource("10_17p3m")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlooe"]
atlas = ExtResource("10_17p3m")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3scne"]
atlas = ExtResource("10_17p3m")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p232a"]
atlas = ExtResource("10_17p3m")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q886"]
atlas = ExtResource("10_17p3m")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4601d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x70j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htklb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckajw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxiug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28uff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s5go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i8o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr61v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7cde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8blf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vkjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65c58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlooe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3scne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p232a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q886")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[node name="Tank" type="RigidBody2D" groups=["tank"]]
z_index = 1
can_sleep = false
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_dsgy6")
tank_spec = ExtResource("2_eykj3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
show_behind_parent = true
shape = SubResource("RectangleShape2D_cbkxa")

[node name="Hull" type="Sprite2D" parent="."]
unique_name_in_owner = true
show_behind_parent = true
texture = SubResource("AtlasTexture_f0hnj")
script = ExtResource("3_axr6c")

[node name="LeftTrack" type="AnimatedSprite2D" parent="Hull"]
unique_name_in_owner = true
show_behind_parent = true
sprite_frames = SubResource("SpriteFrames_eykj3")

[node name="RightTrack" type="AnimatedSprite2D" parent="Hull"]
unique_name_in_owner = true
show_behind_parent = true
sprite_frames = SubResource("SpriteFrames_cxr3h")

[node name="TrackSounds" type="Node2D" parent="Hull"]

[node name="TrackSoundSlow" type="AudioStreamPlayer2D" parent="Hull/TrackSounds"]
unique_name_in_owner = true
max_distance = 400.0

[node name="TrackSoundNormal" type="AudioStreamPlayer2D" parent="Hull/TrackSounds"]
unique_name_in_owner = true
max_distance = 400.0

[node name="TrackSoundFast" type="AudioStreamPlayer2D" parent="Hull/TrackSounds"]
unique_name_in_owner = true
max_distance = 400.0

[node name="EngineSounds" type="Node2D" parent="Hull"]

[node name="EngineSoundSlow" type="AudioStreamPlayer2D" parent="Hull/EngineSounds"]
unique_name_in_owner = true
rotation = -0.001131
scale = Vector2(1, 1)
autoplay = true
max_distance = 800.0

[node name="EngineSoundNormal" type="AudioStreamPlayer2D" parent="Hull/EngineSounds"]
unique_name_in_owner = true
rotation = -0.001131
scale = Vector2(1, 1)
autoplay = true
max_distance = 800.0

[node name="EngineSoundFast" type="AudioStreamPlayer2D" parent="Hull/EngineSounds"]
unique_name_in_owner = true
rotation = -0.001131
scale = Vector2(1, 1)
autoplay = true
max_distance = 800.0

[node name="Turret" type="Sprite2D" parent="."]
unique_name_in_owner = true
show_behind_parent = true
script = ExtResource("4_eykj3")

[node name="Cannon" type="Sprite2D" parent="Turret"]
unique_name_in_owner = true
show_behind_parent = true

[node name="MuzzleMarker" type="Marker2D" parent="Turret/Cannon"]
unique_name_in_owner = true

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="Turret/Cannon/MuzzleMarker"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
position = Vector2(33, 0)
sprite_frames = SubResource("SpriteFrames_f0hnj")
animation = &"flash"

[node name="LineOfSightRaycast" type="RayCast2D" parent="Turret/Cannon/MuzzleMarker"]
unique_name_in_owner = true
target_position = Vector2(50, 0)

[node name="ReloadTimer" type="Timer" parent="Turret"]
unique_name_in_owner = true
one_shot = true

[node name="CannonSound" type="AudioStreamPlayer2D" parent="Turret"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_f0hnj")

[node name="TankHUD" parent="." instance=ExtResource("7_lx22l")]
unique_name_in_owner = true
z_index = 1023
offset_top = -46.0
offset_bottom = -25.0

[node name="AudioListener2D" type="AudioListener2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position_smoothing_enabled = true

[node name="DeathExplosionSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_f0hnj")
max_distance = 1000.0

[node name="DeathExploisonSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4601d")
frame = 15
frame_progress = 1.0
